--- a/Implemented Links/reference.htm
+++ b/Implemented Links/reference.htm
@@ -16,7 +16,7 @@
       <li><a href="structure.htm" title="To structure page"> Structuring pages</a></li>
       <li><a href="links.htm" title="To link page">Creating links</a></li>
       <li><a href="reference.htm" title="To references page">HTML reference</a></li>
-      <li><a href="next.htm" title="To next page">Next steps</a></li>
+      <li><a href="next.htm" title="To the next page">Next steps</a></li>
     </ul>
   </nav>
 </header>
@@ -172,7 +172,7 @@
   </article>
 </main>
 <footer role="contentinfo">
-  <p>&copy; <a href="http://www.lynda.com" title="lynda.com" target="_blank">lynda.com</a> | follow me and lynda.com on Twitter! <a href="https://twitter.com/jameswillweb" title="Follow me on Twitter">@jameswillweb</a> <a href="https://twitter.com/lynda" title="Follow lynda.com on Twitter">@lynda</a></p>
+  <p>&copy; <a href="http://www.lynda.com" title="go to lynda.com" target="_blank">lynda.com</a> | follow me and lynda.com on Twitter! <a href="https://twitter.com/jameswillweb" title="Follow me on Twitter">@jameswillweb</a> <a href="https://twitter.com/lynda" title="Follow lynda.com on Twitter">@lynda</a></p>
 </footer>
 </body>
 </html>
