--- a/Implemented Links/reference.htm
+++ b/Implemented Links/reference.htm
@@ -16,7 +16,7 @@
       <li><a href="structure.htm" title="To structure page"> Structuring pages</a></li>
       <li><a href="links.htm" title="To link page">Creating links</a></li>
       <li><a href="reference.htm" title="To references page">HTML reference</a></li>
-      <li><a href="next.htm" title="To the next page">Next steps</a></li>
+      <li><a href="next.htm" title="To next page">Next steps</a></li>
     </ul>
   </nav>
 </header>
